11675: outline collapse working ok with fixed widths set by variables

--- a/app/assets/stylesheets/admin/_variables.scss
+++ b/app/assets/stylesheets/admin/_variables.scss
@@ -1,3 +1,5 @@
 // Common variables
 $content-wrapper-padding: 20px;
 $app-fonts: 'Open Sans', sans-serif;
+$q-outline-collapsed-width: 30px;
+$q-outline-expanded-width: 250px;
